add demo.env and dev.env

--- a/dev.env
+++ b/dev.env
@@ -8,6 +8,6 @@ DATAHUB_URL      = "https://portal-datahub-ifactory-eks009.sa.wise-paas.com"
 MOBILE_URL       = "https://ifactory-webservice-ifactory-eks009.sa.wise-paas.com"
 
 MONGODB_URL      = "52.187.110.12:27017"
-MONGODB_DATABASE = "ifp-data-hub"
-MONGODB_USERNAME = "064dae22-d736-406a-b49d-79204be5b66b"
-MONGODB_PASSWORD = "ahbUVXJcM1OcCjs3c131Lt7W"
+MONGODB_DATABASE = "ifp-data-hub-dev"
+MONGODB_USERNAME = "e270673c-ce08-4c35-93e2-333ed103736f"
+MONGODB_PASSWORD = "VUSkt9bbTKSTzb7ZArp36jLk"
