--- a/demo.env
+++ b/demo.env
@@ -1,5 +1,5 @@
 ADMIN_USERNAME   = "devanliang@iii.org.tw"
-ADMIN_PASSWORD   = "48edc8ae@Ss0"
+ADMIN_PASSWORD   = "Abc1234#"
 
 SSO_URL          = "http://portal-sso-ensaas.hz.wise-paas.com.cn"
 APM_URL          = "https://portal-apm-apm-eks009.sa.wise-paas.com"
