1. fix config parameter error 2. update borker to get _id and parameter _id by name=status 3. update outbound add machine and parameter remove func

--- a/dev.env
+++ b/dev.env
@@ -5,3 +5,5 @@ MONGODB_URL      = "52.187.110.12:27017"
 MONGODB_DATABASE = "ifp-data-hub-dev"
 MONGODB_USERNAME = "e270673c-ce08-4c35-93e2-333ed103736f"
 MONGODB_PASSWORD = "VUSkt9bbTKSTzb7ZArp36jLk"
+
+IFP_URL          = "https://ifp-organizer-training-eks011.hz.wise-paas.com.cn/graphql"
