--- a/demo.env
+++ b/demo.env
@@ -5,3 +5,5 @@ MONGODB_URL      = "52.187.110.12:27017"
 MONGODB_DATABASE = "ifp-data-hub"
 MONGODB_USERNAME = "8676b401-a6ce-417b-a0f0-8dee6dee0a67"
 MONGODB_PASSWORD = "9TuSZ7CD3ah0aQmdHbGqNjrr"
+
+IFP_URL          = "https://ifp-organizer-training-eks011.hz.wise-paas.com.cn/graphql"
