--- a/tienkang.env
+++ b/tienkang.env
@@ -5,3 +5,5 @@ MONGODB_URL      = "52.187.110.12:27017"
 MONGODB_DATABASE = "tienkang"
 MONGODB_USERNAME = "50cc2508-87cb-441e-9d61-9bcd943686f6"
 MONGODB_PASSWORD = "yYRiiFW0Kh0ejyLoCfEC3bNB"
+
+IFP_URL          = "https://ifp-organizer-tienkang-eks002.sa.wise-paas.com/graphql"
