--- a/local.env
+++ b/local.env
@@ -1,4 +1,4 @@
-MONGODB_URL      = "localhost:27017"
+MONGODB_URL      = "127.0.0.1:27017"
 MONGODB_DATABASE = "zyhyin"
 MONGODB_USERNAME = "peter"
 MONGODB_PASSWORD = "P@ssw0rd"
