--- a/local.env
+++ b/local.env
@@ -1,7 +1,7 @@
-MONGODB_URL      = "127.0.0.1:27017"
-MONGODB_DATABASE = "zyhyin"
-MONGODB_USERNAME = "peter"
-MONGODB_PASSWORD = "P@ssw0rd"
-IFP_URL          = "https://ifp-organizer-training-eks011.hz.wise-paas.com.cn/graphql"
-ADMIN_USERNAME   = "devanliang@iii.org.tw"
-ADMIN_PASSWORD   = "Abcd1234#"
+MONGODB_URL      = "Set Mongo URL"
+MONGODB_DATABASE = "Set Mongo Database Name"
+MONGODB_USERNAME = "Set Mongo Database Username"
+MONGODB_PASSWORD = "Set Mongo Database Password"
+IFP_URL          = "Set IFP Desk URL"
+ADMIN_USERNAME   = "Set IFP Desk Username"
+ADMIN_PASSWORD   = "Set IFP Desk Password"
