--- a/local.env
+++ b/local.env
@@ -1,7 +1,8 @@
-MONGODB_URL      = "Set Mongo URL"
-MONGODB_DATABASE = "Set Mongo Database Name"
-MONGODB_USERNAME = "Set Mongo Database Username"
-MONGODB_PASSWORD = "Set Mongo Database Password"
-IFP_URL          = "Set IFP Desk URL"
-ADMIN_USERNAME   = "Set IFP Desk Username"
-ADMIN_PASSWORD   = "Set IFP Desk Password"
+MONGODB_URL                          = "Set Mongo URL"
+MONGODB_DATABASE                     = "Set Mongo Database Name"
+MONGODB_USERNAME                     = "Set Mongo Database Username"
+MONGODB_PASSWORD                     = "Set Mongo Database Password"
+IFP_DESK_API_URL                     = "Set IFP Desk API URL"
+IFP_DESK_USERNAME                    = "Set IFP Desk Username"
+IFP_DESK_PASSWORD                    = "Set IFP Desk Password"
+IFPS_ANDON_DAEMON_DATABROKER_API_URL = "Set ANDON_DAEMON_DATABROKER API URL"
